<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">learning</string>
    <string name="app_null"></string>
    <string name="app_chinese_name">佳腾移动学习系统</string>
    <string name="app_login_account">账号</string>
    <string name="app_login_password">密码</string>
    <string name="app_login_text">登录</string>
    <string name="app_my">我的</string>
    <string name="app_question">试题</string>
    <string name="app_paper">试卷</string>
    <string name="app_res">多媒体</string>
    <string name="app_exam">网络考试</string>
    <string name="app_offline">离线学习</string>
    <string name="app_user_name">奥巴马</string>
    <string name="app_user_dept">人力资源部</string>
    <string name="app_user_task_title1">您即将参加</string>
    <string name="app_user_task_title2">您上次学习到</string>
    <string name="app_question_title">试题学习</string>
    <string name="app_search_tip">输入您想搜索的内容</string>
    <string name="app_selall">全选</string>
    <string name="app_clear">清空</string>
    <string name="app_del">删除</string>
    <string name="app_cancel">取消</string>

    <!-- mupdf -->
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <!-- mupdf -->

    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_start">@string/app_chinese_name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_exam">ExamActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_task">MyTaskActivity</string>
    <string name="title_activity_my_learning">MyLearningActivity</string>
    <string name="title_activity_my_fov">MyFovActivity</string>
    <string name="title_activity_resource_detail">ResourceDetailActivity</string>

</resources>